--- a/.env.example
+++ b/.env.example
@@ -1,27 +1,27 @@
 # The discord bot token
 # Required
-AYAKA_TICTACTOE_TOKEN=''
+AYAKA_TICTACTOE_TOKEN=""
 
 # The mongodb server url
 # Required
-AYAKA_TICTACTOE_MONGODB_URL=''
+AYAKA_TICTACTOE_MONGO_URL=""
 
 # The bot embed color
 # Optional
-AYAKA_TICTACTOE_EMBED_COLOR='#40E0D0'
+AYAKA_TICTACTOE_EMBED_COLOR="#40E0D0"
 
 # Whether the bot is in maintenance or not
 # Optional
-AYAkA_TICTACTOE_MAINTENANCE='yes'
+AYAkA_TICTACTOE_MAINTENANCE="yes"
 
 # The bot owners
 # Optional
-AYAKA_TICTACTOE_OWNERS='709261464468193322,404051185470013450'
+AYAKA_TICTACTOE_OWNERS="709261464468193322,404051185470013450"
 
 # The bot test server
 # Optional
-AYAKA_TICTACTOE_SERVERS='918349846073733200'
+AYAKA_TICTACTOE_SERVERS="918349846073733200"
 
 # The mongodb server database name
 # Optional
-AYAKA_TICTACTOE_MONGODB_DATABASE='ayaka-tictactoe'
+AYAKA_TICTACTOE_MONGO_DATABASE="ayaka-tictactoe"
