--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "aoi.mongo": "^0.1.1",
     "canvas": "^2.8.0",
     "discord.js": "^13.5.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "mongodb": "^4.3.0"
   },
   "devDependencies": {
     "@hazmi35/eslint-config": "^7.0.1",
