--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "homepage": "https://github.com/Azusfin/ayaka-tictactoe#readme",
   "dependencies": {
     "@sapphire/decorators": "^3.1.4",
-    "@sapphire/framework": "^2.3.0-pr-293.69c030f.0",
+    "@sapphire/framework": "^3.0.0-next.506fd58.0",
     "@sapphire/plugin-logger": "^2.1.1",
     "aoi.mongo": "^0.1.1",
     "canvas": "^2.8.0",
