--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/Azusfin/ayaka-tictactoe#readme",
   "dependencies": {
+    "@discordjs/builders": "^0.11.0",
     "@sapphire/decorators": "^3.1.4",
     "@sapphire/framework": "^3.0.0-next.506fd58.0",
     "@sapphire/plugin-logger": "^2.1.1",
