--- a/package.json
+++ b/package.json
@@ -31,10 +31,12 @@
     "canvas": "^2.8.0",
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
+    "humanize-duration": "^3.27.1",
     "mongodb": "^4.3.0"
   },
   "devDependencies": {
     "@hazmi35/eslint-config": "^7.0.1",
+    "@types/humanize-duration": "^3.27.1",
     "@typescript-eslint/eslint-plugin": "^5.8.1",
     "@typescript-eslint/parser": "^5.8.1",
     "eslint": "^8.6.0",
