--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@sapphire/plugin-logger": "^2.1.1",
     "aoi.mongo": "^0.1.1",
     "canvas": "^2.8.0",
+    "canvas-constructor": "^5.0.1",
     "discord.js": "^13.5.1",
     "dotenv": "^10.0.0",
     "humanize-duration": "^3.27.1",
-    "mongodb": "^4.3.0"
+    "mongodb": "^4.3.0",
+    "tic-tac-toe-minimax-engine": "^1.0.8"
   },
   "devDependencies": {
     "@hazmi35/eslint-config": "^7.0.1",
